--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,18 +6,18 @@
 [tool.robotpy]
 
 # Version of robotpy this project depends on
-robotpy_version = "2024.1.1.2"
+robotpy_version = "2024.1.1.3"
 
 # Which extra RobotPy components should be installed
 # -> equivalent to `pip install robotpy[extra1, ...]
 robotpy_extras = [
     # "all"
-    "apriltag",
+    #"apriltag",
     #"commands2",
     # "cscore"
     "navx",
     # "pathplannerlib"
-    # "phoenix5"
+    # "phoenix5",
     "phoenix6",
     # "playingwithfusion"
     # "rev"
@@ -29,4 +29,5 @@ robotpy_extras = [
 # Other pip packages to install
 requires = [
     "robotpy-commands-v2==2024.0.0b4",
+    "robotpy-ctre==2024.1.1",
 ]
