--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,4 +30,5 @@ robotpy_extras = [
 requires = [
     "robotpy-commands-v2==2024.0.0b4",
     "robotpy-ctre==2024.1.1",
+    "robotpy-pathplannerlib",
 ]
