Updated TOML, merged in pathplanner updates.  Simulator working mostly well for paths

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,5 +29,5 @@ robotpy_extras = [
 # Other pip packages to install
 requires = [
     "robotpy-ctre==2024.1.1",
-    "robotpy-pathplannerlib",
+    "robotpy-pathplannerlib>=2024.1.6",
 ]
